--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "scripts": {
+    "build": "nuxi build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate"
+    "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
     "@nuxt/content": "2.0.1",
