--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "private": true,
   "scripts": {
     "build": "nuxi build",
-    "dev": "nuxt dev",
+    "dev": "nuxi dev",
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@headlessui/vue": "1.6.6",
     "@nuxt/content": "2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@popperjs/core": "^2.11.5",
-    "@unocss/nuxt": "^0.43.0",
-    "@unocss/preset-typography": "^0.43.0",
-    "@vueuse/nuxt": "^8.7.5",
+    "@popperjs/core": "2.11.5",
+    "@unocss/nuxt": "0.43.0",
+    "@unocss/transformer-directives": "0.43.2",
+    "@vueuse/nuxt": "8.7.5",
     "nuxt": "3.0.0-rc.4",
     "sass": "1.53.0",
     "typescript": "4.7.4"
