--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@unocss/preset-icons": "0.44.0",
     "@unocss/transformer-directives": "0.43.2",
     "@vueuse/nuxt": "8.7.5",
-    "nuxt": "3.0.0-rc.4",
+    "nuxt": "npm:nuxt3@latest",
     "sass": "1.53.0",
     "typescript": "4.7.4"
   }
