--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@headlessui/vue": "1.6.6",
-    "@iconify-json/mdi": "1.1.26",
-    "@iconify-json/twemoji": "^1.1.5",
+    "@headlessui/vue": "1.6.7",
+    "@iconify-json/mdi": "1.1.27",
+    "@iconify-json/twemoji": "1.1.5",
     "@nuxt/content": "2.0.1",
-    "@nuxtjs/color-mode": "^3.1.4",
+    "@nuxtjs/color-mode": "3.1.4",
     "@popperjs/core": "2.11.5",
-    "@unocss/nuxt": "0.43.0",
-    "@unocss/preset-icons": "0.44.0",
-    "@unocss/transformer-directives": "0.43.2",
-    "@vueuse/nuxt": "8.7.5",
-    "nuxt": "npm:nuxt3@latest",
+    "@unocss/nuxt": "0.44.1",
+    "@unocss/preset-icons": "0.44.1",
+    "@unocss/transformer-directives": "0.44.1",
+    "@vueuse/nuxt": "8.9.2",
+    "nuxt": "npm:nuxt3@3.0.0-rc.5-27628787.7c45eee",
     "sass": "1.53.0",
     "typescript": "4.7.4"
   }
